<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Signalbox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="power_on">Power on</string>
    <string name="power_off">Power off</string>
    <string name="configuration">Config</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="app_description">Android SRCP Client</string>
    <string name="new_layout">New layout</string>
    <string name="width">width (segments)</string>
    <string name="height">height (segments)</string>
    <string name="create">create</string>
    <string name="server_address">Server Address</string>
    <string name="server_port">Server Port</string>
    <string name="segment_setting">Segment Setting</string>
    <string name="bus">Bus</string>
    <string name="address">Address</string>
    <string name="id">ID</string>
    <string name="test">Test</string>
    <string name="test0">Tst0</string>
    <string name="test1">Tst1</string>
    <string name="test2">Tst+1/0</string>
    <string name="test3">Tst+1/1</string>
    <string name="marker_id">Marker ID</string>
    <string name="stop">stop</string>
    <string name="add_loco">add loco</string>
    <string name="image">Image</string>
    <string name="service_mode">Service Mode</string>
    <string name="cv">CV</string>
    <string name="value">Value</string>
    <string name="program">program</string>
    <string name="done">done</string>
    <string name="loco">Locomotive</string>
    <string name="okay">okay</string>
    <string name="choose">choose...</string>
    <string name="connecting">connecting to server...</string>
    <string name="error">error occured</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="cancel">cancel</string>
    <string name="no_connectivity">no connectivity</string>
    <string name="connectivity_available">connectivity available</string>
    <string name="really_remove">Really remove this loco?</string>
    <string name="delete">delete</string>
    <string name="tapRouteStart">Tap route start</string>
    <string name="tapRouteEnd">Tap route end</string>
    <string name="setRouteComplete">setting route completed</string>
    <string name="setRouteCancelled">setting route cancelled</string>
    <string name="noRouteFound">no route found</string>
    <string name="about">Simple SRCP Client for Android. All rights reserved. No liability whatsoever.</string>
    <string name="export">export</string>
    <string name="functionKeys">Function Keys</string>

</resources>
