<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black_trans"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout android:layout_gravity="center"
    android:background="@android:color/background_light"
    android:orientation="vertical" android:layout_width="400dp"
    android:padding="10dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        android:text="@string/segment_setting"/>

    <de.ludetis.android.signalbox.SegmentView
        android:id="@+id/segment"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textColor="@android:color/black"
        android:text="@string/id"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:id="@+id/id"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textColor="@android:color/black"
        android:text="@string/bus"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:id="@+id/bus"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textColor="@android:color/black"
        android:text="@string/address"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:id="@+id/address"/>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:id="@+id/test"
        android:text="@string/test"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_gravity="right"
        android:id="@+id/cancel"
        android:text="@string/cancel"/>
    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:id="@+id/save"
    android:text="@string/save"/>
</FrameLayout>
</LinearLayout>
    </FrameLayout>