<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black_trans"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout android:layout_gravity="center"
    android:background="@android:color/background_light"
    android:orientation="vertical" android:layout_width="400dp"
    android:padding="10dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginBottom="10dp"
        android:text="@string/service_mode"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/address"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:id="@+id/address"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/cv"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:id="@+id/cv"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/value"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:id="@+id/value"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/program"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/program"
            android:textColor="@android:color/holo_red_light" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/done"
            android:text="@string/done"/>
    </FrameLayout>


</LinearLayout>
    </FrameLayout>