<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black_trans"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout android:layout_gravity="center"
    android:background="@android:color/background_light"
    android:orientation="vertical" android:layout_width="400dp"
    android:padding="10dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/black"
        android:text="@string/app_name"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/about"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:id="@+id/okay"
        android:text="@string/okay"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/export"
        android:text="@string/export"/>
    </LinearLayout>
</LinearLayout>
    </FrameLayout>