<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black_trans"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout android:layout_gravity="center"
    android:background="@android:color/background_light"
    android:orientation="vertical" android:layout_width="400dp"
    android:padding="10dp"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginBottom="10dp"
        android:text="@string/loco"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/bus"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:id="@+id/bus"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/address"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:id="@+id/address"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/image"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="end"
                android:id="@+id/image"
                android:src="@drawable/default_loco"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/choose"
                android:text="@string/choose"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/service_mode"
            android:text="@string/service_mode"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/delete_loco"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/delete"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/create"
            android:text="@string/okay"/>

    </LinearLayout>


</LinearLayout>
    </FrameLayout>